# ani-tupi

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  ANIMESDIGITAL_PLUGIN.md  CHANGELOG.md  CLAUDE.md  CODE_SMELLS.md  CONTRIBUTING.md  DELETION_LOG.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MANGA_PREFERENCES_IMPLEMENTATION.md  Makefile  NOTICE  PERFORMANCE_REPORT.md  PERFORMANCE_TESTING.md  PLUGIN_ANIMESDIGITAL_SUMMARY.md  PRD-refatoracao-v2.md  PRD-refatoracao-v3.md  README.md  SYNC_ERROR_FIX.md  TESTING_SUMMARY.md  TOKEN_MONITORING.md  animesdigital.py.backup  install-cli.py  install.sh  jujutsu-kaisen-series-scrolled.yaml  justfile  main.py  manga_tupi.py  package-lock.json  plugin_manager.py  pyproject.toml  pyrightconfig.json  pytest.ini  test_anilist_matching.py  test_animesdigital_debug.py  (+23 more)
.github/workflows/: build-test.yml  ci.yml  publish-pypi-manual.yml  publish-testpypi.yml  release.yml
.gsd/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md
.planning/: PHASE2_HANDOFF.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.serena/: project.yml
.serena/memories/: MEMORY.md  code_style.md  pytest_debugging.md  suggested_commands.md
api/: __init__.py  schemas.py  server.py  state.py
api/frontend/: index.html  manifest.json  sw.js
api/routes/: __init__.py  history.py  playback.py  search.py  settings.py  sources.py
commands/: __init__.py  _shared.py  anilist.py  anime.py  config.py  local_anime.py  update.py
docs/: TOPANIMES_COMPLETE.md  TOPANIMES_INDEX.md  TOPANIMES_PLUGIN.md  plugin-research-v1.3.md  topanimes_quick_reference.md  topanimes_scraping_analysis.md  video-extraction-animeroll.md  video-extraction-anitube.md
manga_scrapers/: __init__.py  loader.py
manga_scrapers/plugins/: __init__.py  mangadex.py  mangalivre.py  mugiwaras.py
models/: __init__.py  config.py  manga_context.py  models.py
openspec/: project.md
scrapers/: loader.py
scrapers/core/: __init__.py  blogger_resolver.py  browser_pool.py  cache.py.DEPRECATED  concurrent.py  http_client.py  selenium_driver.py
scrapers/plugins/: animefire.py  animeplayer.py  animesdigital.py  animesonlinecc.py  animesonlinecloud.py  anitube.py  anroll.py  dattebayo.py  goyabu.py  sushianimes.py  topanimes.py  utils.py
scripts/: clean_caches.py  debug_incremental_search.py  debug_update_check.py  extract_animesonline.py  extract_dattebayo.py  extract_topanimes_video.py  test_scrapers_selenium.py  test_topanimes_debug.py  validate_playback.py
services/: __init__.py  anilist_service.py  anime_service.py  anime_skip_service.py  episode_repository.py  history_service.py  jikan_client.py  local_anime_service.py  local_manga_service.py  manga_service.py  playback_coordinator.py  player_repository.py  plugin_registry.py  priority_utils.py  repository.py  search_repository.py  settings_management_service.py  unified_manga_service.py  update_check_service.py
services/anilist/: __init__.py  anime_operations.py  client.py  formatters.py  manga_operations.py
services/anime/: __init__.py  airing_episodes_service.py  anilist_discovery_service.py  anilist_integration.py  search.py  (+14 more)
tests/: README_ANILIST_TESTS.md  TEST_SUITE_ANILIST.md  conftest.py  performance_benchmarks.py  test_airing_anime_entry_model.py  test_airing_episodes_filter.py  test_airing_episodes_service.py  test_anilist_airing_query.py  test_anilist_authentication.py  test_anime_download_integration.py  test_anime_download_models.py  test_anime_download_service.py  test_anime_episode_range_parser.py  test_anime_search_workflow_integration.py  test_animesdigital_audio_filter.py  test_animesdigital_incremental_search.py  test_cli_config_subcommand.py  test_cli_episode_flag.py  test_cli_quality_flag.py  test_cli_update_subcommand.py  test_cli_version_flag.py  test_dattebayo_scraper.py  test_debug_logging_e2e.py  test_downloaded_chapters_tracker.py  test_episode_repository_new.py  test_goyabu_integration.py  test_goyabu_plugin.py  test_history_service.py  test_incremental_search_algorithm.py  test_incremental_search_state.py  test_ipc_navigation.py  test_local_anime_service.py  test_local_playback_sync.py  test_logging_config.py  test_main_menu_flow.py  test_manga_workflow_integration.py  test_mangalivre_integration.py  test_mangalivre_plugin.py  test_offline_sync.py  test_playback_coordinator.py  (+9 more)
ui/: anilist_menus.py  components.py
utils/: anilist_discovery.py  cache.py  cache_manager.py  episode_range_parser.py  exceptions.py  headless_detector.py  image_viewers.py  logging.py  manga_reader.py  manga_selection_preferences.py  manga_source_preferences.py  pdf_converter.py  persistence.py  playback_hints.py  range_parser.py  scraper_cache.py  title_utils.py  video_player.py
(+97 files in other folders)
