[project]
name = "ani-tupi"
version = "2.3.8"
description = "Assista anime e leia mangá direto do terminal sem anúncios"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Levy Marques", email = "levy.vix@protonmail.com"}
]
license = {text = "GPL-3.0"}
keywords = ["anime", "manga", "cli", "streaming", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "tqdm>=4.67.0",
    "rich>=14.2.0",
    "inquirerpy>=0.3.4",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "diskcache>=5.6.3",
    "python-mpv>=1.0.8",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "pillow>=12.1.0",
    "yt-dlp>=2026.1.31",
    "selenium>=4.0.0",
    "bs4>=0.0.2",
    "thefuzz>=0.22.1",
]

[project.urls]
"Homepage" = "https://github.com/levyvix/ani-tupi"
"Bug Tracker" = "https://github.com/levyvix/ani-tupi/issues"
"Forked From" = "https://github.com/eduardonery1/ani-tupi"

[project.scripts]
ani-tupi = "main:cli"
manga-tupi = "manga_tupi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "prek>=0.3.0",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-semantic-release>=9.21.1",
    "ruff>=0.14.10",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Ignore less critical rules for this codebase
ignore = [
    "D107",      # Missing docstring in __init__
    "D205",      # 1 blank line required between summary and description
    "D401",      # First line should be in imperative mood
    "D404",      # First word should not be "This"
    "BLE001",    # Blind except Exception - acceptable in this codebase
    "E722",      # Bare except - acceptable in this codebase
    "TRY002",    # Create your own exception
    "TRY003",    # Avoid specifying long messages outside exception class
    "TRY300",    # Consider moving to else block
    "EM101",     # Exception must not use string literal
    "S105",      # Possible hardcoded password (false positive for URLs)
    "S603",      # subprocess call - needed for mpv
    "S607",      # Starting process with partial path - needed for mpv
    "PLR0911",   # Too many return statements
    "PLR0912",   # Too many branches
    "PLR0915",   # Too many statements
    "C901",      # Function too complex
    "FBT001",    # Boolean positional arg
    "FBT002",    # Boolean default arg
    "PLC0415",   # Import outside top-level
    "ANN001",    # Missing type annotation for function argument
    "ANN002",    # Missing type annotation for *args
    "ANN003",    # Missing type annotation for **kwargs
    "ANN201",    # Missing return type annotation
    "ANN202",    # Missing return type annotation for private function
    "ANN204",    # Missing return type annotation for __init__
    "ARG001",    # Unused function argument
    "ARG002",    # Unused method argument
    "ARG004",    # Unused static method argument
    "RUF001",    # Ambiguous unicode character
    "RUF012",    # Mutable class attributes
    "RUF059",    # Unpacked variable never used
    "PLW2901",   # Redefining loop variable
    "SLF001",    # Private member access
    "N812",      # Lowercase imported as non-lowercase
    "A004",      # Import shadows builtin
    "F821",      # Undefined name
    "S110",      # Log without exc_info
    "S112",      # Log without exc_info
    "B904",      # raise within except without from
]

[tool.mypy]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "uv build"
commit_message = "chore(version): bump to {version}"
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "test", "ci", "style", "build"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"

[tool.pyright]
venvPath = "./"
venv = ".venv"
